# multiexporter

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: app.py  metric.py  openmeteo.py  requirements.txt
src/controller/: EnergyChartsController.py  OpenMeteoController.py  UtilsController.py  YahooFinanceController.py
src/service/: EnergyChartsService.py  OpenMeteoService.py  YahooFinanceService.py
src/templates/: index.html  openmeteo.html  sidebar.html  svg.html
src/utils/: apiClient.py  config.py  location.py  metric.py
